--- a/Front-End/src/components/Game3/Game3.css
+++ b/Front-End/src/components/Game3/Game3.css
@@ -1,82 +1,59 @@
-.quiz-container {
-  background-image: url("Bg-Learning.svg");
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f5f5f5;
-  }
-  
-  .quiz-title {
-    background-color: rgba(26, 166, 183, 0.8);
-  padding: 1%;
-  color: #002d40;
-  text-align: center;
-  font-family: "Urbanist", sans-serif;
+.omr-btn {
+  border: none;
+  border-radius: 50px;
+  background-color: #002d40;
+  color: white;
+  width: 75px;
+  font-size: 35px;
   font-weight: 800;
-  text-transform: uppercase;
-  }
-  
-  .quiz-body {
-    
-  width: 100%;
-  max-width: 600px;
-  padding: 2rem;
-  border-radius: 20px;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .quiz {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 2px;
-    
-    
-  }
-  
-  .quiz-questions {
-    width: 100%;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  
-  .quiz-answers {
-    width: 100%;
-    margin-bottom: 1rem;
-    
-  }
-  
-  .question-text {
-    font-size: 1.5rem;
-  }
-  .question-text div {
-    margin-bottom: 0.7rem;
-  }
-  
-  .quiz-option {
-    width: 100%;
-    margin-bottom: 1rem;
-    
-  }
-  
-  .quiz-option-row {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 0.5rem;
-  }
-  
-  .quiz-head {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  .submit-button {
-    display: flex;
-    justify-content: center;
-   
-  }
-  
+}
+
+.main-game3 {
+  margin-top: 5%;
+}
+
+.card-width-game3 {
+  width: 90% !important;
+  margin: auto;
+}
+
+.game-head {
+  padding: 0 3%;
+  padding: 1%;
+}
+
+.opt-div {
+  padding: 0 3%;
+  background-color: rgba(26, 166, 183, 0.2);
+  border-radius: 10px;
+}
+
+.question-text {
+  text-align: center;
+  font-size: 35px;
+  font-weight: 800;
+}
+.question-text div {
+  margin-bottom: 0.7rem;
+}
+
+.quiz-option-row {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 0.5rem;
+}
+
+.quiz-head {
+  font-size: 45px;
+  margin-bottom: 1rem;
+  text-align: center;
+  border-radius: 30px;
+  font-family: "Lilita One", cursive;
+  color: #ff414d !important;
+  font-style: italic;
+  font-weight: 600;
+}
+.submit-button {
+  display: flex;
+  justify-content: center;
+}
