--- a/Front-End/src/components/Home/HeroSection.css
+++ b/Front-End/src/components/Home/HeroSection.css
@@ -2,9 +2,10 @@
   object-fit: cover;
   filter: brightness(50%);
   width: 100%;
-  height: 100%;
-  position: fixed;
+  height: 100vh;
+  position: absolute;
   z-index: -1;
+  top: 0;
 }
 
 .ital-rem {
@@ -17,7 +18,6 @@
 }
 
 .hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
   height: 100vh;
   width: 100%;
   display: flex;
@@ -26,11 +26,12 @@
   align-items: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
+  top: 0;
 }
 
 .hero-container > h1 {
   color: #fff;
-  font-size: 100px;
+  font-size: 6rem;
   margin-top: -100px;
 }
 
@@ -40,32 +41,6 @@
   font-size: 32px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-}
-
-.hero-btns {
-  margin-top: 32px;
-}
-
-.fa-play-circle {
-  margin-left: 4px;
-}
-
-@media screen and (max-width: 960px) {
-  .hero-container > h1 {
-    font-size: 70px;
-    margin-top: -150px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .hero-container > h1 {
-    font-size: 50px;
-    margin-top: -100px;
-  }
-
-  .hero-container > p {
-    font-size: 30px;
-  }
 }
 
 .btn-acc-home {
