--- a/Front-End/src/components/SignupLogin/Signup.css
+++ b/Front-End/src/components/SignupLogin/Signup.css
@@ -1,8 +1,17 @@
+.absol {
+  position: absolute;
+  z-index: 2;
+  width: 100vw;
+}
+
 .first-div {
   background-color: #002d40;
-  height: 984px;
-  text-align: center;
-  padding-top: 2%;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  padding-top: 3%;
 }
 
 .h2-acc {
@@ -10,18 +19,15 @@
   font-weight: 900;
   font-size: 3.5rem;
   text-align: left;
-  margin-left: 15%;
 }
 
 .p-acc {
   color: white;
   font-weight: 500;
   font-size: 1rem;
-  text-align: left;
   margin-left: 15%;
   margin-right: 15%;
   text-align: justify;
-  padding-top: 2%;
 }
 
 .img-acc {
@@ -31,19 +37,29 @@
 
 .second-div {
   background-color: rgba(26, 166, 183, 0.1);
-  height: 984px;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  padding-top: 3%;
 }
 
 .sign-div {
   display: block;
-  padding: 10% 20%;
+  padding: 0 20%;
 }
 
 @media (max-width: 1000px) {
   .sign-div {
     display: block;
-    margin-top: 15%;
-    padding: 10% 15%;
+    padding: 0 15%;
+  }
+
+  .first-div,
+  .second-div {
+    padding-top: 0;
   }
 }
 
@@ -77,7 +93,7 @@ li button {
   background-color: #002d40;
   color: white;
   font-size: 1.5rem;
-  width: 25rem;
+  width: 100%;
   border-color: #002d40;
   text-underline-offset: 0.5rem;
   margin-bottom: 2rem;
@@ -164,6 +180,7 @@ li button {
 .btn-acc {
   background-color: #002d40;
   padding: 1% 20%;
+  text-align: center;
   font-weight: 700;
   font-size: 1.3rem;
   border-radius: 30px;
